{
    "name": "BaseInput",
    "maps": [
        {
            "name": "CartInput",
            "id": "f9e61fad-fa86-4cd1-ba41-853998808b28",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "ec64003d-7a8f-45d5-84c5-874b468d8e4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "1e8d810d-0717-4b26-9bf0-29f9ae95cb75",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37253a98-1901-494d-9fdb-7efc0e415161",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de015fbb-90ab-47fe-833c-cf781480b4d8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fa0d904-b46b-489c-96d2-bf2b57075b6c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}